<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_stats"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_stats" />
    <item
        android:id="@+id/navigation_help"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_help" />

    <item
        android:id="@+id/navigation_database"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_database" />
    <item
        android:id="@+id/navigation_missing"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_missing" />

</menu>